rechange some words

--- a/README.me
+++ b/README.me
@@ -1,2 +1,2 @@
 Calculator 
-Follow this link to watch Calculator project - https://codepen.io/sahil_learner/full/BaqZMGJ
+Click on this link and watch my Calculator project - https://codepen.io/sahil_learner/full/BaqZMGJ
